# goblin-wrangler

./: .gitignore  CODEOWNERS  Jenkinsfile  README.md  agent.yaml  docker-compose.yml  main.tf  netlify.toml  variables.tf
kingpin/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  go.mod  go.sum  mix.exs  pyproject.toml
kingpin/assets/: package-lock.json
kingpin/cmd/web/: handlers.go  helpers.go  main.go  routes.go  templates.go
kingpin/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  releases.exs  test.exs
kingpin/internal/models/: snippets.go
kingpin/kingpin/: __init__.py  application.py  healthcheck.py  user.py  wsgi.py
kingpin/kingpin/db/: context.py  functions.py  manage.py  models.py
kingpin/kingpin/migrations/: env.py
kingpin/kingpin/migrations/versions/: 74b648e2fb03_initial_migration.py
kingpin/lib/: kingpin.ex  kingpin_web.ex
kingpin/lib/kingpin/: accounts.ex  application.ex  chat.ex  groups.ex  repo.ex
kingpin/lib/kingpin/accounts/: user.ex
kingpin/lib/kingpin/chat/: message.ex
kingpin/lib/kingpin/groups/: group.ex
kingpin/lib/kingpin_web/: endpoint.ex  gettext.ex  presence.ex  router.ex  telemetry.ex
kingpin/lib/kingpin_web/channels/: user_socket.ex
kingpin/lib/kingpin_web/controllers/: page_controller.ex
kingpin/lib/kingpin_web/live/: live_helpers.ex  modal_component.ex  page_live.ex
kingpin/lib/kingpin_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
kingpin/migrations/versions/: dabff41410ff_.py
kingpin/priv/repo/: seeds.exs
kingpin/sql/: init.sql
kingpin/test/: test_helper.exs
kingpin/test/kingpin/: accounts_test.exs  chat_test.exs
kingpin/test/support/: channel_case.ex  conn_case.ex  data_case.ex
kingpin/tests/: test_healthcheck.py  test_version.py
kingpin/ui/html/: base.tmpl
(+140 files in other folders)
