[tool.poetry]
name = "kingpin"
version = "0.1.0"
description = "The main controller API of the Goblin Wrangler"
authors = ["Stephen Badger <stephen.badger@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
